--- a/entries/Dog-and-Cat.html
+++ b/entries/Dog-and-Cat.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>dogandcat</title>
+  <title>Dog-and-Cat</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -25,16 +25,21 @@
 <body>
 <div class="mainTuT">
   <nav class="nav">
-      <a href="" class="select">正在热映</a>
-      <a href="">即将上映</a>
-      <a href="">经典影片</a>
+      <a href="" class="select">Q: Life with a?(⊙ω⊙)</a>
+      <a href="">A.Cat(´-ω-`)</a>
+      <a href="">B.Dog(｡ ́︿ ̀｡)</a>
+      <a href="">C.Both(=´∀｀)人(´∀｀=)</a>
   </nav>
   <div class="banner">
-    <div style="text-align: center; padding: 20px; background-color: #3FC1B9; color: white; border-radius: 10px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);">
-        <h2>Good News!</h2>
-        <p>You are in danger</p>
-    </div>
-    <div class="scrolling-text show">Don't Touch this Button! I will be mad!</div>
+    <div class="banner">
+      <div style="text-align: center; padding: 20px; background-color: #B0E0E6; color: white; border-radius: 10px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);">
+          <div class="scrolling-text">
+              <h2 id="banner-title">The world’s purr-fect roommates: cats and dogs! Find them at the link below! 🐱💻🐶</h2>
+              <a href="https://www.aspca.org/nyc/aspca-adoption-center-nyc" id="banner-text">https://www.aspca.org/nyc/aspca-adoption-center-nyc</a>
+          </div>
+      </div>
+  </div>
+  
 </div>
 <script>
   // Assuming you have a function that closes the modal
@@ -59,34 +64,29 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
 <div class="containerOmO"> 
 <div class="choose-area">
   <div class="choose-item clearfix">
-    <div class="left">类型</div>
+    <div class="left">Cat roommates love:</div> 
     <div class="right">
       <ul class="clearfix">
-        <li class="select"><a href="">Lorem.</a></li>
-        <li><a href="">Vero!</a></li>
-        <li><a href="">Doloribus.</a></li>
-        <li><a href="">Facilis.</a></li>
-        <li><a href="">Cum.</a></li>
-        <li><a href="">Quam?</a></li>
-        <li><a href="">Consequuntur.</a></li>
-        <li><a href="">Laudantium.</a></li>
-        <li><a href="">Corrupti.</a></li>
-        <li><a href="">Aliquam.</a></li>
-        <li><a href="">In?</a></li>
-        <li><a href="">Voluptates.</a></li>
-        <li><a href="">At!</a></li>
-        <li><a href="">Sint.</a></li>
-        <li><a href="">Accusantium?</a></li>
-        <li><a href="">Obcaecati?</a></li>
-        <li><a href="">Eveniet.</a></li>
-        <li><a href="">Nulla.</a></li>
-        <li><a href="">Voluptatum.</a></li>
-        <li><a href="">Sint.</a></li>
+        <li class="select"><a href="">Napping💤</a></li>
+        <li><a href="">Sunshine🌞</a></li>
+        <li><a href="">Windowsills🪟</a></li>
+        <li><a href="">Laziness🥱</a></li>
+        <li><a href="">Comfort🛏️</a></li>
+        <li><a href="">Stretching🐱</a></li>
+        <li><a href="">Elegance🐈‍⬛</a></li>
+        <li><a href="">Scratching the sofa😈</a></li>
+        <li><a href="">Knocking over cups🤔</a></li>
+        <li><a href="">Mischief🪄</a></li>
+        <li><a href="">Chasing shadows👥</a></li>
+        <li><a href="">Jumping🎉</a></li>
+        <li><a href="">Being playful☺️</a></li>
+        <li><a href="">Bouncing around⚽️</a></li>
+        <li><a href="">	Freedom⛰️</a></li>
       </ul>
     </div>
   </div>
   <div class="choose-item clearfix">
-    <div class="left">地区</div>
+    <div class="left">Dog roommates love:</div>
     <div class="right">
       <ul class="clearfix">
         <li><a href="">Lorem.</a></li>
@@ -113,7 +113,7 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
     </div>
   </div>
   <div class="choose-item clearfix">
-    <div class="left">年代</div>
+    <div class="left">They both love</div>
     <div class="right">
       <ul class="clearfix">
         <li><a href="">Lorem.</a></li>
@@ -144,7 +144,33 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/oc/great.png" alt="">
+            <img src="../images/oc/great.png" alt="" data-content="Hey there, pup, with your silly grin,
+            You chase your tail like it’s a win!
+            You’re loud and goofy, a clumsy delight,
+            But your snuggles and barks make everything right!">
+          </a>
+        </div>
+        <div class="name a">a poem</div>
+        <div class="score">9.9</div>
+      </div>
+      <div class="wflbb-item">
+        <div class="poster">
+          <a href="">
+            <img src="../images/oc/bye.png" alt="" data-content="Goodbye, My Friend
+
+            Time to travel, my furry mate,
+            With a wag and a purr, we’ll celebrate.
+            Chase your dreams, have fun out there,
+            I’ll miss you tons, but don’t despair!">
+          </a>
+        </div>
+        <div class="name a">another poem</div>
+        <div class="score">4.9</div>
+      </div>
+      <div class="wflbb-item">
+        <div class="poster">
+          <a href="">
+            <img src="../images/oc/cry.png" alt="" data-content="This is the text for Image 1">
           </a>
         </div>
         <div class="name a">Opossum</div>
@@ -153,7 +179,7 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/oc/bye.png" alt="">
+            <img src="../images/oc/lessionme.png" alt="" data-content="This is the text for Image 111111">
           </a>
         </div>
         <div class="name a">Opossum</div>
@@ -162,7 +188,7 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/oc/cry.png" alt="">
+            <img src="../images/oc/dontgo.png" alt="" data-content="This is the text for Image 11">
           </a>
         </div>
         <div class="name a">Opossum</div>
@@ -171,7 +197,7 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/oc/lessionme.png" alt="">
+            <img src="../images/oc/hiii.png" alt="" data-content="This is the text for Image 1111">
           </a>
         </div>
         <div class="name a">Opossum</div>
@@ -180,7 +206,7 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/oc/dontgo.png" alt="">
+            <img src="../images/oc/shock.png" alt="" data-content="This is the text for Image ajjj">
           </a>
         </div>
         <div class="name a">Opossum</div>
@@ -189,7 +215,7 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/oc/hiii.png" alt="">
+            <img src="../images/oc/hug.png" alt="" data-content="This is the text for Image www">
           </a>
         </div>
         <div class="name a">Opossum</div>
@@ -198,7 +224,23 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/oc/shock.png" alt="">
+            <img src="../images/oc/sadcrycry.png" alt="" data-content="This is the text for Image zozo">
+        </div>
+        <div class="name a">Opossum</div>
+        <div class="score">9.9</div>
+      </div>
+      <div class="wflbb-item">
+        <div class="poster">
+          <a href="">
+            <img src="../images/oc/likeyou.png" alt="" data-content="This is the text for Image zodl">
+        </div>
+        <div class="name a">Opossum</div>
+        <div class="score">9.9</div>
+      </div>
+      <div class="wflbb-item">
+        <div class="poster">
+          <a href="">
+            <img src="../images/oc/loveyou.png" alt="" data-content="This is the text for Image aaa">
           </a>
         </div>
         <div class="name a">Opossum</div>
@@ -207,7 +249,7 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/Home.png" alt="">
+            <img src="../images/oc/oyasumi.png" alt="" data-content="This is the text for Image qoqo">
           </a>
         </div>
         <div class="name a">Opossum</div>
@@ -216,23 +258,7 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/Home.png" alt="">
-        </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
-      </div>
-      <div class="wflbb-item">
-        <div class="poster">
-          <a href="">
-            <img src="../images/Home.png" alt="">
-        </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
-      </div>
-      <div class="wflbb-item">
-        <div class="poster">
-          <a href="">
-            <img src="../images/Home.png" alt="">
+            <img src="../images/oc/addd.png" alt="" data-content="This is the text for Image 1">
           </a>
         </div>
         <div class="name a">Opossum</div>
@@ -241,7 +267,7 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/Home.png" alt="">
+            <img src="../images/oc/paipai.png" alt="" data-content="This is the text for Image 1">
           </a>
         </div>
         <div class="name a">Opossum</div>
@@ -250,7 +276,7 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/Home.png" alt="">
+            <img src="../images/oc/tanks.png" alt="" data-content="This is the text for Image 1">
           </a>
         </div>
         <div class="name a">Opossum</div>
@@ -259,132 +285,8 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/Home.png" alt="">
+            <img src="../images/oc/ok.png" alt="" data-content="This is the text for Image 1"> 
           </a>
-        </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
-      </div>
-      <div class="wflbb-item">
-        <div class="poster">
-          <a href="">
-            <img src="../images/Home.png" alt="">
-          </a>
-        </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
-      </div>
-      <div class="wflbb-item">
-        <div class="poster">
-          <a href="">
-            <img src="../images/Home.png" alt="">
-          </a>
-        </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
-      </div>
-      <div class="wflbb-item">
-        <div class="poster">
-          <a href="">
-            <img src="../images/Home.png" alt="">
-          </a>
-        </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
-      </div>
-      <div class="wflbb-item">
-        <div class="poster">
-          <a href="">
-            <img src="../images/Home.png" alt="">
-          </a>
-        </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
-      </div>
-      <div class="wflbb-item">
-        <div class="poster">
-          <a href="">
-            <img src="../images/Home.png" alt="">
-          </a>
-        </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
-      </div>
-      <div class="wflbb-item">
-        <div class="poster">
-          <a href="">
-            <img src="../images/Home.png" alt="">
-          </a>
-        </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
-      </div>
-      <div class="wflbb-item">
-        <div class="poster">
-          <a href="">
-            <img src="../images/Home.png" alt="">
-          </a>
-        </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
-      </div>
-      <div class="wflbb-item">
-        <div class="poster">
-          <a href="">
-            <img src="../images/Home.png" alt="">
-          </a>
-        </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
-      </div>
-      <div class="wflbb-item">
-        <div class="poster">
-          <a href="">
-            <img src="../images/Home.png" alt="">
-          </a>
-        </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
-      </div>
-      <div class="wflbb-item">
-        <div class="poster">
-          <a href="">
-            <img src="../images/Home.png" alt="">
-          </a>
-        </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
-      </div>
-      <div class="wflbb-item">
-        <div class="poster">
-          <a href="">
-            <img src="../images/Home.png" alt="">
-          </a>
-        </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
-      </div>
-      <div class="wflbb-item">
-        <div class="poster">
-          <a href="">
-            <img src="../images/Home.png" alt="">
-          </a>
-        </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
-      </div>
-      <div class="wflbb-item">
-        <div class="poster">
-          <a href="">
-            <img src="../images/Home.png" alt="">
-        </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
-      </div>
-      <div class="wflbb-item">
-        <div class="poster">
-          <a href="">
-            <img src="../images/Home.png" alt="">
         </div>
         <div class="name a">Opossum</div>
         <div class="score">9.9</div>
@@ -392,7 +294,7 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
       <div class="pagerr">
         <a href="">previous page</a>
         <a href="">1</a><a href="">2</a><a href="">3</a><a href="">4</a><a href="">5</a><a href="">6</a><a href="">7</a><a href="">8</a><a href="">9</a><a href="">10</a>
-        <a href="">next page</a>
+        <a href="">Back homepage</a>
       </div>
     </div>
     <div></div>
@@ -405,29 +307,16 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
 <div class="modal">
   <div class="container2333">
     <div class="main2333">
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam facilis dolorem accusantium laboriosam recusandae optio repudiandae voluptate officia eaque eveniet itaque quis alias non, earum commodi velit, maiores ipsa unde?
+      <div id="modal-text">
+        In a sunlit space, a cat and a pup,
+        Napping and playing, with love filling up.
+        Mischief and cuddles, they dance through the day,
+        Best friends forever, in their joyful play. </div>
       <div class="close">X</div>
     </div>
   </div>
 </div>
-<script>
-  // 选择 Modal 和关闭按钮
-  const modal = document.querySelector('.modal');
-  const closeBtn = document.querySelector('.modal .close');
 
-  // 监听关闭按钮的点击事件
-  closeBtn.addEventListener('click', () => {
-    modal.style.display = 'none'; // 隐藏 Modal
-  });
-
-  // 如果想要点击某个poster打开modal，可以在此添加监听器
-  const posters = document.querySelectorAll('.wflbb-item .poster');
-  posters.forEach(poster => {
-    poster.addEventListener('click', () => {
-      modal.style.display = 'flex'; // 显示 Modal
-    });
-  });
-</script>
 
 <script>
   const modalContainer = document.querySelector('.modal .container2333');
@@ -454,6 +343,29 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
     const banner = document.getElementById('banner');
     banner.style.display = 'block'; // 显示 banner
     setTimeout(() => banner.classList.add('show'), 10); // 添加过渡类
+});
+</script>
+
+
+<script>
+// 获取 modal 和关闭按钮
+const modal = document.querySelector('.modal');
+const modalText = document.getElementById('modal-text'); // 获取 modal 中文本部分
+const closeBtn = document.querySelector('.modal .close');
+
+// 关闭按钮点击事件
+closeBtn.addEventListener('click', () => {
+  modal.style.display = 'none'; // 隐藏 modal
+});
+
+// 为每张图片添加点击事件
+document.querySelectorAll('.wflbb-item .poster img').forEach(img => {
+  img.addEventListener('click', (e) => {
+    e.preventDefault(); // 阻止默认的链接行为
+    const content = img.getAttribute('data-content'); // 获取图片的 data-content 属性值
+    modalText.textContent = content || "默认内容"; // 更新 modal 中的文本
+    modal.style.display = 'flex'; // 显示 modal
+  });
 });
 
 </script>
