--- a/entries/Homepage.html
+++ b/entries/Homepage.html
@@ -106,7 +106,7 @@
         Oyster
         entries - > Oyster
     </a>
-    <a herf="mailto:lik276@newschool.edu">
+    <a href="mailto:lik276@newschool.edu">
         click this to send an email
     </a>
     <header>
@@ -144,44 +144,64 @@
         <section class="secondary-block">
             <div class="grid-container">
                 <div class="card">
-                    <img src="../images/squirrel.png" alt="Squirrel Dreys">
-                    <p>Dreys</p>
+                    <a href="../entries/Squirrels.html">
+                        <img src="../images/squirrel.png" alt="Squirrel Dreys">
+                        <p>Squirrel</p>
+                    </a>
                 </div>
                 <div class="card">
-                    <img src="../images/squirrel.png" alt="Squirrel Dreys">
-                    <p>Dreys</p>
+                    <a href="../entries/Oyster.html">
+                        <img src="../images/Oysters/pixoyster/sleepingoyster.png" alt="Squirrel Dreys">
+                        <p>Oyster</p>
+                    </a>
                 </div>
                 <div class="card">
-                    <img src="../images/squirrel.png" alt="Squirrel Dreys">
-                    <p>Dreys</p>
+                    <a href="../entries/Red-tailed-hawk.html">
+                        <img src="../images/squirrel.png" alt="Squirrel Dreys">
+                        <p>Red-tailed-hawk</p>
+                    </a>
                 </div>
                 <div class="card">
-                    <img src="../images/squirrel.png" alt="Squirrel Dreys">
-                    <p>Dreys</p>
+                    <a href="../entries/Dog-and-Cat.html">
+                        <img src="../images/oc/pin.png" alt="Squirrel Dreys">
+                        <p>Dog-and-Cat</p>
+                    </a>
                 </div>
                 <div class="card">
-                    <img src="../images/squirrel.png" alt="Squirrel Dreys">
-                    <p>Dreys</p>
+                    <a href="../entries/test1.0.html">
+                        <img src="../images/squirrel.png" alt="Squirrel Dreys">
+                        <p>Opossum</p>
+                    </a>
                 </div>
                 <div class="card">
-                    <img src="../images/squirrel.png" alt="Squirrel Dreys">
-                    <p>Dreys</p>
+                    <a href="../entries/test3.0.html">
+                        <img src="../images/squirrel.png" alt="Squirrel Dreys">
+                        <p>whale</p>
+                    </a>
                 </div>
                 <div class="card">
-                    <img src="../images/squirrel.png" alt="Squirrel Dreys">
-                    <p>Dreys</p>
+                    <a href="../entries/SquirrelDrey7.html">
+                        <img src="../images/squirrel.png" alt="Squirrel Dreys">
+                        <p>Dreys 7</p>
+                    </a>
                 </div>
                 <div class="card">
-                    <img src="../images/squirrel.png" alt="Squirrel Dreys">
-                    <p>Dreys</p>
+                    <a href="../entries/SquirrelDrey8.html">
+                        <img src="../images/squirrel.png" alt="Squirrel Dreys">
+                        <p>Dreys 8</p>
+                    </a>
                 </div>
                 <div class="card">
-                    <img src="../images/squirrel.png" alt="Squirrel Dreys">
-                    <p>Dreys</p>
+                    <a href="../entries/SquirrelDrey9.html">
+                        <img src="../images/squirrel.png" alt="Squirrel Dreys">
+                        <p>Dreys 9</p>
+                    </a>
                 </div>
                 <div class="card">
-                    <img src="../images/squirrel.png" alt="Squirrel Dreys">
-                    <p>Dreys</p>
+                    <a href="../entries/SquirrelDrey10.html">
+                        <img src="../images/squirrel.png" alt="Squirrel Dreys">
+                        <p>Dreys 10</p>
+                    </a>
                 </div>
             </div>
         </section>
