--- a/entries/test1.0.html
+++ b/entries/test1.0.html
@@ -115,6 +115,7 @@
       <div class="text-content">
           <div class="title">AIM for happiness</div>
           <div class="description">How do I live</div>
+          <a href="../entries/Homepage.html">
       </div>
   </section>
 </article>
