--- a/entries/Dog-and-Cat.html
+++ b/entries/Dog-and-Cat.html
@@ -294,7 +294,7 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
       <div class="pagerr">
         <a href="">previous page</a>
         <a href="">1</a><a href="">2</a><a href="">3</a><a href="">4</a><a href="">5</a><a href="">6</a><a href="">7</a><a href="">8</a><a href="">9</a><a href="">10</a>
-        <a href="">Back homepage</a>
+        <a href="../entries/Homepage.html">Back homepage </a>
       </div>
     </div>
     <div></div>
