--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     </a>
                 </div>
                 <div class="card">
-                    <a href="entries/SquirrelDrey7.html">
+                    <a href="entries/test4.0.html">
                         <img src="images/squirrel.png" alt="Squirrel Dreys">
                         <p>Dreys 7</p>
                     </a>
