--- a/entries/Homepage.html
+++ b/entries/Homepage.html
@@ -162,62 +162,62 @@
         <section class="secondary-block">
             <div class="grid-container">
                 <div class="card">
-                    <a href="../entries/Squirrels.html">
-                        <img src="../images/squirrel.png" alt="Squirrel Dreys">
+                    <a href="entries/Squirrels.html">
+                        <img src="images/squirrel.png" alt="Squirrel Dreys">
                         <p>Squirrel <button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="../entries/Oyster.html">
-                        <img src="../images/Oysters/pixoyster/sleepingoyster.png" alt="Squirrel Dreys">
+                    <a href="entries/Oyster.html">
+                        <img src="mages/Oysters/pixoyster/sleepingoyster.png" alt="Squirrel Dreys">
                         <p>Oyster <button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="../entries/Red-tailed-hawk.html">
-                        <img src="../images/squirrel.png" alt="Squirrel Dreys">
+                    <a href="entries/Red-tailed-hawk.html">
+                        <img src="images/squirrel.png" alt="Squirrel Dreys">
                         <p>hawk <button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="../entries/Dog-and-Cat.html">
-                        <img src="../images/oc/pin.png" alt="Squirrel Dreys">
+                    <a href="entries/Dog-and-Cat.html">
+                        <img src="images/oc/pin.png" alt="Squirrel Dreys">
                         <p>Dog-cat <button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="../entries/test1.0.html">
-                        <img src="../images/squirrel.png" alt="Squirrel Dreys">
+                    <a href="entries/test1.0.html">
+                        <img src="images/squirrel.png" alt="Squirrel Dreys">
                         <p>Opossum <button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="../entries/test3.0.html">
-                        <img src="../images/squirrel.png" alt="Squirrel Dreys">
+                    <a href="entries/test3.0.html">
+                        <img src="images/squirrel.png" alt="Squirrel Dreys">
                         <p>Opossum <button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="../entries/SquirrelDrey7.html">
-                        <img src="../images/squirrel.png" alt="Squirrel Dreys">
+                    <a href="entries/SquirrelDrey7.html">
+                        <img src="images/squirrel.png" alt="Squirrel Dreys">
                         <p>Opossum <button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="../entries/SquirrelDrey8.html">
-                        <img src="../images/squirrel.png" alt="Squirrel Dreys">
+                    <a href="entries/test4.0.html">
+                        <img src="images/squirrel.png" alt="Squirrel Dreys">
                         <p>Opossum <button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="../entries/SquirrelDrey9.html">
-                        <img src="../images/squirrel.png" alt="Squirrel Dreys">
+                    <a href="entries/changed.html">
+                        <img src="images/squirrel.png" alt="Squirrel Dreys">
                         <p>Opossum <button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="../entries/SquirrelDrey10.html">
-                        <img src="../images/squirrel.png" alt="Squirrel Dreys">
+                    <a href="entries/test6.0.html">
+                        <img src="images/squirrel.png" alt="Squirrel Dreys">
                         <p>Opossum <button class="add-to-cart">➕</button></p>
                     </a>
                 </div>
