--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/Kiara.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href=".css/Kiara.css">
     
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="../images/Icon.png">
+    <link rel="icon" type="image/png" href="images/Icon.png">
 
     <style>
         body {
