--- a/entries/Squirrels.html
+++ b/entries/Squirrels.html
@@ -3,8 +3,8 @@
 <head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <title>Kiara - Unique Short-Term Rentals</title>
-    <meta name="description" content="An online platform connecting travelers with furry hosts, offering unique short-term rental experiences in New York.">
+    <title>Squirrel Dreys</title>
+    <meta name="description" content="">
     <meta name="author" content="Your Name">
 
     <!-- Mobile Specific Metas -->
@@ -13,106 +13,42 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/animals.css">
+    <link rel="stylesheet" href="../css/squirrel.css">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="../images/favicon.ico">
-
-    <style>
-        body {
-            width: 1440px;
-            height: 5533px;
-            background: #7C6F4F;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            color: white;
-        }
-
-        header {
-            padding: 1rem;
-        }
-
-        header nav {
-            display: flex;
-            justify-content: space-between;
-            color: white;
-        }
-
-        main {
-            display: flex;
-            padding: 2rem;
-        }
-
-        .image-container {
-            flex: 1;
-            margin-right: 2rem; /* Space between image and text */
-        }
-
-        .text-container {
-            flex: 2; /* Adjusts the text container width */
-        }
-
-        footer {
-            text-align: center;
-            padding: 1rem;
-            color: white;
-        }
-
-        footer nav {
-            margin-bottom: 1rem;
-        }
-
-        img {
-            max-width: 100%; /* Ensure the image fits within its container */
-            height: auto; /* Maintain aspect ratio */
-        }
-    </style>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="../index.html">Home</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-            <a href="fluffy-new-yorker.html">Back to Squirrel Dreys</a> <!-- Link to the first page -->
-            <button class="theme-switcher" id="themeSwitcher" aria-label="Toggle dark mode">🌞</button>
-        </nav>
-    </header>
-
-    <main>
-        <h1>Hey New Yorker! :D</h1>
-        <section>
-            <div class="image-container">
-                <img src="../images/Home.png" alt="Squirrel Dreys">
-            </div>
-            <div class="text-container">
-                <p class="red-big-center">Property Features:</p>
-                <p>1. High Tree Hollows: Located in tall trees, these hollows are safe from predators and extremely comfortable. Made from twigs, leaves, and soft materials, they provide cozy and hidden shelter.</p>
-                <p>2. Natural Nests: Some tree-top nests, known as “dreys,” are made of twigs and leaves. They are sturdy and warm, suited for rainy days or chilly nights.</p>
-                <p>Grey squirrels forage in the cooler parts of the day, rest at noon, and become active again in the evening. We suggest checking in around noon to align with the landlord’s schedule.</p>
-            </div>
-        <img usemap="#squirrelsMap" src="../images/realmapforsqurriel.png" alt="this is the map for squrriels">
-        <map>
-        <area shape="circle" coords="1653,536,200" href="https://www.google.com/maps/place/Riverside+Park"= 4m10!1m3!11m2!2s7Ixq8J9nQpOGR0Q7hPjwFw!3e3!3m5!1s0x89c2f62ed8cf502f:0x7c67f4849fdf7287!8m2!3d40.8095625!4d-73.9673125!16zL20vMDFkZ3Jj?entry=ttu&g_ep=EgoyMDI0MTAwOS4wIKXMDSoASAFQAw%3D%3D" alt=""target="_blank">
-        </map name=squirrelsMap>
-        </a>
-        </section>
-    
-    </main>
-
-    <footer>
-        <h3>Join our adventure!</h3>
-        <nav>
-            <a href="../index.html">Home</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-            <a href="fluffy-new-yorker.html">Back to Squirrel Dreys</a> <!-- Link to the first page -->
-            <li><a href="../entries/Homepage.html" style="color: rgb(16, 212, 124); text-decoration: none;">Return to the homepage</a></li>
-        </nav>
-        <img src="../images/entry1.png" alt="image of selling oysters">
-        <p>&copy; 2024 Kiara | Unique Rentals</p>
-    </footer>
-
-    <script src="../js/functions.js"></script>
+    <div class="shell">
+        <div class="tall"><span>1</span></div>
+        <div><span>2</span></div>
+        <div><span>3</span></div>
+        <div class="wide"><span>4</span></div>
+        <div><span>5</span></div>
+        <div class="tall"><span>6</span></div>
+        <div class="big"><span>7</span></div>
+        <div><span>8</span></div>
+        <div class="wide"><span>9</span></div>
+        <div class="big"><span>10</span></div>
+        <div class="tall"><span>11</span></div>
+        <div><span>12</span></div>
+        <div><span>13</span></div>
+        <div><span>14</span></div>
+        <div><span>15</span></div>
+        <div class="wide"><span>16</span></div>
+        <div><span>17</span></div>
+        <div><span>18</span></div>
+        <div class="wide"><span>19</span></div>
+        <div><span>20</span></div>
+        <div class="wide"><span>21</span></div>
+        <div class="big"><span>22</span></div>
+        <div><span>23</span></div>
+        <div><span>24</span></div>
+        <div class="big"><span>25</span></div>
+        <div class="tall"><span>26</span></div>
+        <div><span>27</span></div>
+        <div><span>28</span></div>
+        <div><span>29</span></div>
+    </div>
 </body>
 </html>
